PORI-451: fix the alignment correctly.

--- a/drupal/code/themes/custom/kada/src/scss/component/block/_block-news-archive-link.scss
+++ b/drupal/code/themes/custom/kada/src/scss/component/block/_block-news-archive-link.scss
@@ -32,10 +32,10 @@
     .block__content {
       .l-region--before-content &,
       .section--content &,
-      .page-node &{
+      .domain-visitpori-fi .l-region--after-content & {
         justify-content: flex-end;
       }
-      .l-region--after-content & {
+      .not-front .l-region--after-content & {
         justify-content: flex-start;
       }
     }
